fixed input field bugs on mobile devices

--- a/flights/static/flights/css/flights_map.css
+++ b/flights/static/flights/css/flights_map.css
@@ -23,7 +23,3 @@
 .info-window-section {
     margin-top: 1rem;
 }
-
-#searchContainer {
-    margin-left: 0.5rem;
-}
